2012-08-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_MMAP2_SYSCALL): Remove all definitions.
	* sysdeps/unix/sysv/linux/mmap64.c [__NR_mmap2]: Make code
	unconditional.
	[!__ASSUME_MMAP2_SYSCALL]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/mmap.S (__mmap)
	[__ASSUME_MMAP2_SYSCALL]: Make code unconditional.
	(__mmap) [!__ASSUME_MMAP2_SYSCALL]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/mmap64.S (__mmap64) [__NR_mmap2]:
	Make code unconditional.
	(__mmap64) [!__ASSUME_MMAP2_SYSCALL]: Remove conditional code.
	(__mmap64) [!__NR_mmap2]: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/mmap.S (__mmap)
	[__ASSUME_MMAP2_SYSCALL]: Make code unconditional.
	(__mmap) [!__ASSUME_MMAP2_SYSCALL]: Remove conditional code.
	* sysdeps/unix/sysv/linux/s390/s390-32/mmap64.S (__mmap64)
	[__NR_mmap2]: Make code unconditional.
	(__mmap64) [!__ASSUME_MMAP2_SYSCALL]: Remove conditional code.
	(__mmap64) [!__NR_mmap2]: Likewise.

2012-08-20  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/getrlimit.c: Remove.

2012-08-18  Andreas Jaeger  <aj@suse.de>

	* stdio-common/_itoa.c (_itoa): Add missing DUMMY variable.

2012-08-18  Mike Frysinger  <vapier@gentoo.org>

	* include/sys/socket.h (__have_sock_cloexec): Add attribute_hidden.
	* include/unistd.h (__have_sock_cloexec): Likewise.
	(__have_pipe2): Likewise.
	(__have_dup3): Likewise.

2012-08-18  Mike Frysinger  <vapier@gentoo.org>

	[BZ #9685]
	* include/unistd.h (__have_pipe2): Change define into an extern int.
	(__have_dup3): Likewise.
	* socket/have_sock_cloexec.c: Include fcntl.h.
	(__have_pipe2): New variable.
	(__have_dup3): Likewise.

2012-08-17  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/nice.c: Adjust #include.

2012-08-17  Marek Polacek  <polacek@redhat.com>

	* sysdeps/ieee754/ldbl-96/s_sincosl.c (__sincosl): Use __attribute__